// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleFeatured should render correctly 1`] = `
<DocumentFragment>
  <ul
    class="m-featured foo"
    componenttype="span"
    itemscope=""
    itemtype="https://schema.org/ItemList"
    role="list"
  >
    <li
      class="m-featured__list-item"
      itemprop="itemListElement"
      itemscope=""
      itemtype="http://schema.org/SiteNavigationElement"
    >
      <a
        class="c-link m-featured__item"
        href="/work/path/"
        tabindex="0"
        title="headline"
      >
        <span
          class="m-featured__hover"
        >
          <span
            class="m-featured__text"
          >
            <span
              aria-level="3"
              class="m-featured__headline"
              role="heading"
            >
              headline
            </span>
            <i
              aria-hidden="true"
              class="c-font-icon--plus m-featured__icon"
            />
          </span>
        </span>
        <meta
          content="headline"
          itemprop="name"
        />
      </a>
    </li>
    Module Featured Children
  </ul>
</DocumentFragment>
`;

exports[`ModuleFeatured should render no itemType if unset 1`] = `
<DocumentFragment>
  <ul
    class="m-featured foo"
    componenttype="span"
    role="list"
  >
    <li
      class="m-featured__list-item"
      itemprop="itemListElement"
      itemscope=""
      itemtype="http://schema.org/SiteNavigationElement"
    >
      <a
        class="c-link m-featured__item"
        href="/work/path/"
        tabindex="0"
        title="headline"
      >
        <span
          class="m-featured__hover"
        >
          <span
            class="m-featured__text"
          >
            <span
              aria-level="3"
              class="m-featured__headline"
              role="heading"
            >
              headline
            </span>
            <i
              aria-hidden="true"
              class="c-font-icon--plus m-featured__icon"
            />
          </span>
        </span>
        <meta
          content="headline"
          itemprop="name"
        />
      </a>
    </li>
    Module featured children
  </ul>
</DocumentFragment>
`;

exports[`ModuleFeatured should return null if no content is empty 1`] = `<DocumentFragment />`;
